--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
                 <!--IMAGENS NAS CSS-->
             </div>
             <div id="formulario">
-                <h1>login</h1>
+                <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurções no seu ambiente</p>
                 <form action="login.php" method="post">
-
+                    <p>
+                        <label for="imail"></label>
+                        <input type="email" name="mail" id="imail" placeholder="Seu e-mail" required>
+                    </p>
+                    <p>
+                        <label for="isen"></label>
+                        <input type="password" name="sen" id="isen" placeholder="Sua senha" required>
+                    </p>
+                    <input type="submit" value="Entrar">
                 </form>
             </div>
         </section>
