--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
                             <label for="isen"></label>
                             <input type="password" name="sen" id="isen" placeholder="Sua senha" required autocomplete="current-password" minlength="8" maxlength="15">
                         </div>
-                    <div id="subm"><input type="submit" value="Entrar"></div>
-                    <div>
-                        <a href="#">Esqueci a senha</a>
-                        <span class="material-icons">
-                            lock_reset
-                            </span>
-                    </div>
+                        <input type="submit" value="Entrar" class="subm">
+                         <a href="#" class="botao">Esqueci a senha <span class="material-icons">lock_reset</span></a>
                 </form>
             </div>
         </section>
